Fix alignment on information-section

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ header > ul a {
 }
 
 .card {
+    width: 200px;
     text-align: center;
     color: #444;
 }
